Fix EFS encryption description options

--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -184,7 +184,7 @@ Parameters:
     Default: molecule1
     AllowedPattern: "[a-zA-Z0-9_]*"
   EFSEncryption:
-    Description: EFS volumes can be encrypted. Choose either "yes" or "no".
+    Description: EFS volumes can be encrypted. Choose either "true" or "false".
     Type: String
     Default: 'true'
     AllowedValues:
