Add cfn-lint exclusions for mandatory EFS encryption
Per discussion

--- a/templates/boomi-molecule.template.yaml
+++ b/templates/boomi-molecule.template.yaml
@@ -855,6 +855,12 @@ Resources:
   EFSFilesystemProvisioned:
     Type: AWS::EFS::FileSystem
     Condition: EFSProvisionedThroughput
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks: [EFSFilesystemEncryptionEnabled]
+          ignore_reasons:
+            EFSFilesystemEncryptionEnabled: Optional encryption is required.
     Properties:
       Encrypted: !Ref EFSEncryption
       PerformanceMode: !Ref EFSPerformanceMode
@@ -866,6 +872,12 @@ Resources:
   EFSFilesystemBursting:
     Type: AWS::EFS::FileSystem
     Condition: EFSBurstingThroughput
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks: [EFSFilesystemEncryptionEnabled]
+          ignore_reasons:
+            EFSFilesystemEncryptionEnabled: Optional encryption is required.
     Properties:
       Encrypted: !Ref EFSEncryption
       PerformanceMode: !Ref EFSPerformanceMode
