--- a/templates/boomi-molecule.template.yaml
+++ b/templates/boomi-molecule.template.yaml
@@ -259,47 +259,47 @@ Metadata:
 Mappings:
   AWSAMIRegionMap:
     ap-northeast-1:
-      AMZNLINUX2HVM: ami-06ad9296e6cf1e3cf2
+      AMZNLINUX2: ami-0ce107ae7af2e92b5
     ap-northeast-2:
-      AMZNLINUX2HVM: ami-0e92198843e11ccee
+      AMZNLINUX2: ami-03b42693dc6a7dc35
     ap-south-1:
-      AMZNLINUX2HVM: ami-0732b62d310b80e97
+      AMZNLINUX2: ami-0e306788ff2473ccb
     ap-southeast-1:
-      AMZNLINUX2HVM: ami-0adbe59da7d24a349
+      AMZNLINUX2: ami-015a6758451df3cb9
     ap-southeast-2:
-      AMZNLINUX2HVM: ami-0a58e22c727337c51
+      AMZNLINUX2: ami-0f96495a064477ffb
     ca-central-1:
-      AMZNLINUX2HVM: ami-05de9e98f3bef5e8a
+      AMZNLINUX2: ami-0c2f25c1f66a1ff4d
     eu-central-1:
-      AMZNLINUX2HVM: ami-00edb93a4d68784e3
+      AMZNLINUX2: ami-00a205cb8e06c3c4e
     eu-west-1:
-      AMZNLINUX2HVM: ami-0c3e74fa87d2a4227
+      AMZNLINUX2: ami-0bb3fad3c0286ebd5
     eu-west-2:
-      AMZNLINUX2HVM: ami-04122be15033aa7ec
+      AMZNLINUX2: ami-0a669382ea0feb73a
     eu-west-3:
-      AMZNLINUX2HVM: ami-0bfddfb1ccc3a6993
+      AMZNLINUX2: ami-0de12f76efe134f2f
     sa-east-1:
-      AMZNLINUX2HVM: ami-081a078e835a9f751
+      AMZNLINUX2: ami-02898a1921d38a50b
     us-east-1:
-      AMZNLINUX2HVM: ami-08f3d892de259504d
+      AMZNLINUX2: ami-0947d2ba12ee1ff75
     us-east-2:
-      AMZNLINUX2HVM: ami-016b213e65284e9c9
+      AMZNLINUX2: ami-03657b56516ab7912
     us-west-1:
-      AMZNLINUX2HVM: ami-01311df3780ebd33e
+      AMZNLINUX2: ami-0e4035ae3f70c400f
     us-west-2:
-      AMZNLINUX2HVM: ami-0b1e2eeb33ce3d66f
+      AMZNLINUX2: ami-0528a5175983e7f28
     eu-north-1:
-      AMZNLINUX2HVM: ami-07d2cd50077a70430
+      AMZNLINUX2: ami-0653812935d0743fe
     ap-east-1:
-      AMZNLINUX2HVM: ami-c85919b9
+      AMZNLINUX2: ami-814d0ff0
     me-south-1:
-      AMZNLINUX2HVM: ami-07f5fe2b1e463e06a
+      AMZNLINUX2: ami-08155c9ee8b845e35
     af-south-1:
-      AMZNLINUX2HVM: ami-08b08c0713ffd89ef
+      AMZNLINUX2: ami-0cec12e29ebe3f0d5
     eu-south-1:
-      AMZNLINUX2HVM: ami-01ce136ac703e9899
+      AMZNLINUX2: ami-0759301b88845d121
     ap-northeast-3:
-      AMZNLINUX2HVM: ami-0eed4f60edb4a77f8
+      AMZNLINUX2: ami-024125eb5035fd485
     us-gov-east-1:
       AMZNLINUX2HVM: ami-9a033cfb
     us-gov-west-1:
